@@ -19,6 +19,7 @@ package org.apache.avro.file;
 
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileDescriptor;
 import java.io.IOException;
 
 /** A {@link FileInputStream} that implements {@link SeekableInput}. */
@@ -26,6 +27,7 @@ public class SeekableFileInput
   extends FileInputStream implements SeekableInput {
 
   public SeekableFileInput(File file) throws IOException { super(file); }
+  public SeekableFileInput(FileDescriptor fd) throws IOException { super(fd); }
 
   public void seek(long p) throws IOException { getChannel().position(p); }
   public long tell() throws IOException { return getChannel().position(); }
